fix mobile gap on action panel

--- a/client-v2/src/components/action-panel/ActionPanel.styles.scss
+++ b/client-v2/src/components/action-panel/ActionPanel.styles.scss
@@ -62,6 +62,9 @@
   }
 
   .ActionsPanel {
-    gap: 0px;
+    gap: 5px;
+    & > * {
+      gap: 5px;
+    }
   }
 }
